--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,44 @@
-# IDE setting files #
-###################
-# /로 끝나면 해당 디렉토리 전체를 무시
-.idea/
-.vscode/
-.test/
-target
-build
-*.bin
-*.git
-.svn
-*.class
-*.bak
+# Working Files
+# =========================
+node_modules/
+
+# Window System
+# =========================
+
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
+# OSX
+# =========================
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Custom
+# =========================
+jungyounghwan.github.io.iml
+node_modules/
+dist/
+
 *.iml
+.idea
+.vscode
+*.log
+
+
