--- a/practice_jung/package.json
+++ b/practice_jung/package.json
@@ -6,10 +6,9 @@
     "babel-preset-es2015": "^6.1.18"
   },
   "scripts": {
-    "build": "webpack",
+    "build": "babel ./es6 -d ./es5",
     "watch": "webpack --watch",
-    "start": "webpack-dev-server --hot --inline",
-    "build": "babel ./es6 -d ./es5"
+    "start": "webpack-dev-server --hot --inline"
   },
   "babel": {
     "presets": [
